Adding api-gateway